syntax = "proto3";

package calculator;
option go_package="calculator/calculatorpb";

message SumRequest {
  int32 first_number = 1;
  int32 second_number = 2;
}

message SumResponse {
  int32 result = 1;
}

message PrimeNumberDecompositionRequest {
  int32 value = 1;
}

message PrimeNumberDecompositionResponse {
  string result = 1;
 }
service CalculatorService {
  rpc Sum(SumRequest) returns (SumResponse) {}

  // Server Stream
  rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};
}
